--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
-reqwest = "*"
-actix-rt = "*"
-tokio = { version = "*", features= ["full"]}
+actix-web = "4.0.0-beta.6"
+actix-rt = "2"
+serde = { version = "~1.0.126", features = ["derive"] }
+sqlx = { version = "0.5.5", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
+config = "0.11.0"
 
 [lib]
 path = "src/lib.rs"
@@ -18,3 +19,6 @@ path = "src/lib.rs"
 [[bin]]
 path = "src/main.rs"
 name = "subcriber-mail"
+
+[dev-dependencies]
+reqwest = "*"
